--- a/HCWpf/Interface/MainWindow.xaml
+++ b/HCWpf/Interface/MainWindow.xaml
@@ -103,10 +103,10 @@
                         <RowDefinition Height="auto"></RowDefinition>
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Column="0" Grid.Row="0">
-                        Max Clusters:
+                        Min Clusters:
                     </TextBlock>
                     <TextBox Grid.Column="2" Grid.Row="0" Width="60" TextAlignment="Center"
-                             Text="{Binding ElementName=window, Path=MaxClustets}"/>
+                             Text="{Binding ElementName=window, Path=MinClusters}"/>
                     <TextBlock Grid.Column="0" Grid.Row="1">
                         Distance Limit:
                     </TextBlock>
